--- a/PantryPal/Views/FridgeList/CreateFridgeView/CreateFridgeView.xib
+++ b/PantryPal/Views/FridgeList/CreateFridgeView/CreateFridgeView.xib
@@ -37,7 +37,7 @@
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" image="cross 1"/>
                 </button>
-                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BaQ-3Z-K1y">
+                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="輸入新創冰箱名稱" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BaQ-3Z-K1y">
                     <rect key="frame" x="68" y="106" width="210" height="34"/>
                     <color key="backgroundColor" white="0.91002877331002319" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
