--- a/PantryPal/Views/Ingredients/AddIngredients/AddIngredients.xib
+++ b/PantryPal/Views/Ingredients/AddIngredients/AddIngredients.xib
@@ -139,6 +139,18 @@
                         <action selector="sendData" destination="iN0-l3-epB" eventType="touchUpInside" id="xbW-l8-XLL"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V76-2Z-S5D">
+                    <rect key="frame" x="324" y="6" width="30" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="G36-Vx-KB4"/>
+                        <constraint firstAttribute="width" constant="30" id="cFf-gI-Ngj"/>
+                    </constraints>
+                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                    <state key="normal" image="cross 1"/>
+                    <connections>
+                        <action selector="closeView" destination="iN0-l3-epB" eventType="touchUpInside" id="yY4-q5-I7p"/>
+                    </connections>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -149,6 +161,7 @@
                 <constraint firstItem="JEf-Q6-xsV" firstAttribute="top" secondItem="LhY-Bf-wMs" secondAttribute="bottom" constant="7" id="4pV-Tg-rof"/>
                 <constraint firstItem="tTr-dl-5cl" firstAttribute="top" secondItem="ILd-CN-bbp" secondAttribute="bottom" constant="17" id="7O2-yd-xHX"/>
                 <constraint firstItem="u5j-Ol-ygX" firstAttribute="top" secondItem="tTr-dl-5cl" secondAttribute="bottom" constant="60" id="7YN-1I-KAj"/>
+                <constraint firstAttribute="trailing" secondItem="V76-2Z-S5D" secondAttribute="trailing" constant="6" id="8Eb-R1-1ZT"/>
                 <constraint firstItem="BB7-DO-nWO" firstAttribute="top" secondItem="tTr-dl-5cl" secondAttribute="bottom" constant="8" symbolic="YES" id="8mN-Fo-wY3"/>
                 <constraint firstItem="GPd-Ei-O4j" firstAttribute="leading" secondItem="tTr-dl-5cl" secondAttribute="trailing" constant="14" id="AEp-pX-a3M"/>
                 <constraint firstItem="Hcf-Ps-YWc" firstAttribute="top" secondItem="tTr-dl-5cl" secondAttribute="bottom" constant="8" symbolic="YES" id="Aev-H3-t9U"/>
@@ -157,6 +170,7 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="7hJ-Fg-5P5" secondAttribute="trailing" constant="83" id="Dw0-N4-XYR"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="eYC-23-ZhY" secondAttribute="trailing" constant="24" id="EFw-jH-Fj5"/>
                 <constraint firstItem="GPd-Ei-O4j" firstAttribute="top" secondItem="eYC-23-ZhY" secondAttribute="bottom" constant="8" symbolic="YES" id="ERG-US-9NR"/>
+                <constraint firstItem="V76-2Z-S5D" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="6" id="GqQ-bA-5vO"/>
                 <constraint firstItem="LhY-Bf-wMs" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="31" id="H0b-gM-Lub"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="JEf-Q6-xsV" secondAttribute="trailing" constant="258" id="HTO-9N-dTV"/>
                 <constraint firstItem="Cge-Vu-M2L" firstAttribute="top" secondItem="eYC-23-ZhY" secondAttribute="bottom" constant="11" id="JCq-75-iua"/>
@@ -219,6 +233,7 @@
         <image name="card2" width="1920" height="1080"/>
         <image name="checkmark.circle.fill" catalog="system" width="128" height="123"/>
         <image name="clock.fill" catalog="system" width="128" height="123"/>
+        <image name="cross 1" width="3532" height="3527"/>
         <image name="watermelon" width="80" height="80"/>
         <namedColor name="AccentColor">
             <color red="1" green="0.79199999570846558" blue="0.15700000524520874" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
