--- a/PantryPal/Views/Ingredients/IngredientsDetail/IngredientsDetail.storyboard
+++ b/PantryPal/Views/Ingredients/IngredientsDetail/IngredientsDetail.storyboard
@@ -37,15 +37,6 @@
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" image="calendar" catalog="system"/>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bOR-WO-eMx">
-                                <rect key="frame" x="130" y="686" width="132" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="132" id="275-NH-oFU"/>
-                                    <constraint firstAttribute="height" constant="40" id="amX-dp-fCZ"/>
-                                </constraints>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" image="blueButton"/>
-                            </button>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="GKi-h4-Kxv">
                                 <rect key="frame" x="47" y="528" width="299" height="32"/>
                                 <constraints>
@@ -174,6 +165,29 @@
                                     <segment title="開啟"/>
                                 </segments>
                             </segmentedControl>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="yIZ-Cs-phr">
+                                <rect key="frame" x="35" y="620" width="324" height="128"/>
+                                <color key="backgroundColor" white="0.93118990384615385" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="Ysb-b3-Ixa"/>
+                                    <constraint firstAttribute="width" constant="324" id="f1G-lR-Xbf"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bOR-WO-eMx">
+                                <rect key="frame" x="138" y="756" width="132" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="132" id="275-NH-oFU"/>
+                                    <constraint firstAttribute="height" constant="40" id="amX-dp-fCZ"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="blueButton"/>
+                                <connections>
+                                    <action selector="sendData" destination="Y6W-OH-hqX" eventType="touchUpInside" id="uwF-gk-4tk"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -183,8 +197,9 @@
                             <constraint firstItem="oMb-IF-4Es" firstAttribute="top" secondItem="GZc-IW-xbc" secondAttribute="bottom" constant="10" id="1Bj-Jl-sV4"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="X2U-qd-0dA" secondAttribute="trailing" constant="270" id="2lV-ZQ-zEe"/>
                             <constraint firstItem="4Yd-e5-ynS" firstAttribute="top" secondItem="v8q-8o-4wh" secondAttribute="bottom" constant="8" id="30S-Ol-cXZ"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="91V-t0-Y9j" secondAttribute="bottom" constant="214" id="5n4-Rq-3Jf"/>
+                            <constraint firstItem="bOR-WO-eMx" firstAttribute="top" secondItem="yIZ-Cs-phr" secondAttribute="bottom" constant="8" id="5H2-9H-UXS"/>
                             <constraint firstItem="GZc-IW-xbc" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="35" id="62j-bk-5i8"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="bOR-WO-eMx" secondAttribute="bottom" constant="22" id="63R-9z-9bW"/>
                             <constraint firstItem="jTR-Oq-GIl" firstAttribute="leading" secondItem="91V-t0-Y9j" secondAttribute="trailing" constant="56" id="69a-Tf-t5D"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="4Wt-nn-gli" secondAttribute="trailing" constant="47" id="6mQ-x4-f7G"/>
                             <constraint firstItem="GKi-h4-Kxv" firstAttribute="top" secondItem="X2U-qd-0dA" secondAttribute="bottom" constant="7" id="7fk-ei-eIV"/>
@@ -197,20 +212,21 @@
                             <constraint firstItem="GKi-h4-Kxv" firstAttribute="top" secondItem="49t-Tm-n6f" secondAttribute="bottom" constant="53" id="EiJ-cU-soK"/>
                             <constraint firstItem="49t-Tm-n6f" firstAttribute="top" secondItem="fHf-Jn-Lti" secondAttribute="bottom" constant="16" id="ErY-Yt-z93"/>
                             <constraint firstItem="jTR-Oq-GIl" firstAttribute="top" secondItem="GKi-h4-Kxv" secondAttribute="bottom" constant="14" id="Fus-8M-an0"/>
-                            <constraint firstItem="bOR-WO-eMx" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="130" id="H1Y-Wa-qWI"/>
                             <constraint firstItem="YZN-3C-Gv8" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="35" id="K3U-gB-XES"/>
                             <constraint firstItem="GKi-h4-Kxv" firstAttribute="top" secondItem="sGn-CB-COw" secondAttribute="bottom" constant="46" id="KAa-XJ-DNs"/>
                             <constraint firstItem="lSN-ZP-ccg" firstAttribute="top" secondItem="YZN-3C-Gv8" secondAttribute="bottom" constant="7" id="Kgy-oS-p7p"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="YZN-3C-Gv8" secondAttribute="trailing" constant="36" id="MjQ-n6-jMQ"/>
+                            <constraint firstItem="bOR-WO-eMx" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="138" id="NJZ-Xz-mic"/>
+                            <constraint firstItem="yIZ-Cs-phr" firstAttribute="top" secondItem="jTR-Oq-GIl" secondAttribute="bottom" constant="16" id="NQf-HB-oRS"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="fHf-Jn-Lti" secondAttribute="trailing" constant="40" id="O6t-bW-3Ev"/>
                             <constraint firstItem="78h-iw-CDT" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="35" id="Ol3-g5-kdd"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="jTR-Oq-GIl" secondAttribute="trailing" constant="123" id="Pcu-yr-wfK"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="bOR-WO-eMx" secondAttribute="trailing" constant="131" id="QdG-kD-M7X"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="bOR-WO-eMx" secondAttribute="trailing" constant="123" id="RWQ-di-yF4"/>
                             <constraint firstItem="4Yd-e5-ynS" firstAttribute="leading" secondItem="GZc-IW-xbc" secondAttribute="trailing" constant="17" id="SI8-i4-Duy"/>
-                            <constraint firstItem="bOR-WO-eMx" firstAttribute="top" secondItem="jTR-Oq-GIl" secondAttribute="bottom" constant="82" id="TTl-5C-HwI"/>
                             <constraint firstItem="fHf-Jn-Lti" firstAttribute="top" secondItem="4Wt-nn-gli" secondAttribute="bottom" constant="11" id="UZD-a2-4UW"/>
                             <constraint firstItem="lSN-ZP-ccg" firstAttribute="leading" secondItem="v8q-8o-4wh" secondAttribute="trailing" constant="8" id="ZcQ-LA-KnI"/>
                             <constraint firstItem="4Wt-nn-gli" firstAttribute="leading" secondItem="oMb-IF-4Es" secondAttribute="trailing" constant="17" id="ape-Cn-UWJ"/>
+                            <constraint firstItem="yIZ-Cs-phr" firstAttribute="top" secondItem="91V-t0-Y9j" secondAttribute="bottom" constant="16" id="bCP-2G-LAm"/>
                             <constraint firstItem="4Wt-nn-gli" firstAttribute="top" secondItem="4Yd-e5-ynS" secondAttribute="bottom" constant="8" id="d5n-of-CCS"/>
                             <constraint firstItem="oMb-IF-4Es" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="35" id="dyv-Mw-hny"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="GKi-h4-Kxv" secondAttribute="trailing" constant="47" id="eCS-ud-IHA"/>
@@ -219,16 +235,17 @@
                             <constraint firstItem="91V-t0-Y9j" firstAttribute="top" secondItem="GKi-h4-Kxv" secondAttribute="bottom" constant="14" id="h8b-3y-liq"/>
                             <constraint firstItem="wNR-4j-q3K" firstAttribute="top" secondItem="78h-iw-CDT" secondAttribute="bottom" constant="12" id="hm3-2v-uv9"/>
                             <constraint firstItem="49t-Tm-n6f" firstAttribute="leading" secondItem="sGn-CB-COw" secondAttribute="trailing" constant="9" id="hso-Ft-kXa"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="yIZ-Cs-phr" secondAttribute="trailing" constant="34" id="htC-RK-fHZ"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="L6i-IZ-YAj" secondAttribute="trailing" id="inK-V8-Ie1"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="49t-Tm-n6f" secondAttribute="trailing" constant="47" id="jUf-Zp-8UI"/>
                             <constraint firstItem="v8q-8o-4wh" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="261" id="kRs-it-gnE"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="bOR-WO-eMx" secondAttribute="bottom" constant="92" id="lGb-N6-ejg"/>
                             <constraint firstItem="2KX-Pl-VGl" firstAttribute="leading" secondItem="78h-iw-CDT" secondAttribute="trailing" constant="14" id="lPW-w4-qMy"/>
                             <constraint firstItem="78h-iw-CDT" firstAttribute="top" secondItem="oMb-IF-4Es" secondAttribute="bottom" constant="15" id="qLt-PG-tEp"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="4Yd-e5-ynS" secondAttribute="trailing" constant="47" id="qcz-7g-m6s"/>
                             <constraint firstItem="L6i-IZ-YAj" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="r4O-bt-Arw"/>
                             <constraint firstItem="sGn-CB-COw" firstAttribute="top" secondItem="2KX-Pl-VGl" secondAttribute="bottom" constant="8" symbolic="YES" id="rI0-Ju-cNl"/>
                             <constraint firstItem="sGn-CB-COw" firstAttribute="leading" secondItem="wNR-4j-q3K" secondAttribute="trailing" constant="14" id="rXR-3g-wvI"/>
+                            <constraint firstItem="yIZ-Cs-phr" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="35" id="u9C-C8-uXw"/>
                             <constraint firstItem="YZN-3C-Gv8" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="34" id="uaD-lP-dIW"/>
                             <constraint firstItem="2KX-Pl-VGl" firstAttribute="top" secondItem="4Wt-nn-gli" secondAttribute="bottom" constant="12" id="utF-6u-lko"/>
                             <constraint firstItem="GKi-h4-Kxv" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="47" id="yNE-YD-X8N"/>
@@ -238,6 +255,7 @@
                     <navigationItem key="navigationItem" id="RBK-4c-z8o"/>
                     <connections>
                         <outlet property="ingredientsBarcode" destination="sGn-CB-COw" id="gwN-YI-jEt"/>
+                        <outlet property="ingredientsDescription" destination="yIZ-Cs-phr" id="J4f-cX-PRm"/>
                         <outlet property="ingredientsExpiration" destination="2KX-Pl-VGl" id="MED-s7-VQN"/>
                         <outlet property="ingredientsImage" destination="YZN-3C-Gv8" id="bIW-Oz-nKu"/>
                         <outlet property="ingredientsName" destination="4Yd-e5-ynS" id="muy-kM-aZR"/>
@@ -279,6 +297,9 @@
         <namedColor name="AccentColor">
             <color red="1" green="0.79199999570846558" blue="0.15700000524520874" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="labelColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
