--- a/PantryPal/Views/Fridge/FridgeTabBar.storyboard
+++ b/PantryPal/Views/Fridge/FridgeTabBar.storyboard
@@ -10,10 +10,11 @@
         <scene sceneID="5ll-Sa-eS3">
             <objects>
                 <tabBarController storyboardIdentifier="FridgeTabBarController" id="aad-lk-p5V" customClass="FridgeTabBarController" customModule="PantryPal" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dRe-me-xM9">
+                    <tabBar key="tabBar" contentMode="scaleAspectFit" insetsLayoutMarginsFromSafeArea="NO" id="dRe-me-xM9">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <tabBarAppearance key="scrollEdgeAppearance"/>
                     </tabBar>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VtU-Yp-EKF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
