Added 1.Complete calendar setup 2.Complete calendar gesture zoom, switch week and month

--- a/PantryPal/Views/Ingredients/Calendar/Calendar.xib
+++ b/PantryPal/Views/Ingredients/Calendar/Calendar.xib
@@ -22,10 +22,10 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="SlW-VN-s4W" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="8iR-tk-GZS"/>
-                <constraint firstItem="SlW-VN-s4W" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="S9y-4I-L6v"/>
-                <constraint firstItem="SlW-VN-s4W" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="bBd-Bg-pKn"/>
-                <constraint firstItem="SlW-VN-s4W" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="zh4-bF-QYX"/>
+                <constraint firstItem="SlW-VN-s4W" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="16n-ic-JiE"/>
+                <constraint firstItem="SlW-VN-s4W" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="3Y9-Dh-KVB"/>
+                <constraint firstItem="SlW-VN-s4W" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="kUR-Ke-Ub6"/>
+                <constraint firstItem="SlW-VN-s4W" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="tIg-c1-Uuv"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
