--- a/PantryPal/Views/Calendar/CalendarPage.storyboard
+++ b/PantryPal/Views/Calendar/CalendarPage.storyboard
@@ -34,18 +34,36 @@
                                     <constraint firstAttribute="height" constant="329" id="tgo-8w-y8v"/>
                                 </constraints>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="x4Y-bf-xdw">
+                                <rect key="frame" x="0.0" y="418" width="393" height="400"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="0bU-mT-OxT">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0bU-mT-OxT" id="MYr-gc-2pn">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="cIv-kP-auf" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="30" id="0yB-1l-JnR"/>
                             <constraint firstItem="cIv-kP-auf" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="2Ah-Wl-uL9"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="x4Y-bf-xdw" secondAttribute="trailing" id="2ZQ-4x-Pxn"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="eyl-be-B4G" secondAttribute="trailing" id="7YG-zJ-1kC"/>
                             <constraint firstItem="cIv-kP-auf" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="BHy-uq-fKJ"/>
+                            <constraint firstItem="x4Y-bf-xdw" firstAttribute="top" secondItem="Z7y-Nf-kyM" secondAttribute="bottom" id="DhB-HH-JSK"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="x4Y-bf-xdw" secondAttribute="bottom" id="Qas-KY-zDP"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="eyl-be-B4G" secondAttribute="bottom" id="RHV-1l-WdM"/>
                             <constraint firstItem="Z7y-Nf-kyM" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="TTq-Tx-Gzi"/>
                             <constraint firstItem="eyl-be-B4G" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="Xgd-vs-Og8"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Z7y-Nf-kyM" secondAttribute="trailing" id="beQ-kC-h4X"/>
+                            <constraint firstItem="x4Y-bf-xdw" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="fbd-a3-XJP"/>
                             <constraint firstItem="Z7y-Nf-kyM" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="30" id="kmv-ci-7yz"/>
                             <constraint firstItem="eyl-be-B4G" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="pEB-VR-evF"/>
                         </constraints>
@@ -53,6 +71,7 @@
                     <connections>
                         <outlet property="calendarBackground" destination="Z7y-Nf-kyM" id="FeJ-uj-r4n"/>
                         <outlet property="calendarView" destination="cIv-kP-auf" id="HZu-yy-Sbc"/>
+                        <outlet property="dataTableView" destination="x4Y-bf-xdw" id="PQ7-us-7aK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
